--- a/location.html
+++ b/location.html
@@ -39,7 +39,7 @@
         body,input { font-size: 9pt; font-family:Microsoft JhengHei;padding-top: 100px;}		
         html { height: 100% }  
         body { height: 100%; margin: 0px; }  
-        #map_canvas { margin:0px auto; width:700px; height:500px; }     
+        #map_canvas { margin:0px auto; width:700px; height:700px; }     
 		@media (max-width: 900px) {			
 			#map_canvas {
 				height: 600px;
@@ -81,7 +81,7 @@
                 <span class="icon-bar"></span>
                 <span class="icon-bar"></span>
               </button>
-              <a class="navbar-brand" href="taiwan.html">LOGO</a>
+              <a class="navbar-brand" href="index.html">LOGO</a>
             </div>
             <div id="navbar" class="navbar-collapse collapse">          
 				<ul class="nav navbar-nav navbar-right">
@@ -90,7 +90,7 @@
 					<li class="dropdown hide" id="name">
 						<a  class="dropdown-toggle" id="Uname" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">User<span class="caret"></span></a>
 						<ul class="dropdown-menu">
-							<li><a href="123.html" id="person">person</a></li>
+							<li><a href="#" id="person">person</a></li>
 							<li role="separator" class="divider"></li>
 							<li><a id="out">Log out</a></li>
 						</ul>
