--- a/person.html
+++ b/person.html
@@ -9,7 +9,13 @@
     <meta name="author" content="">
 
     <title>個人頁面</title>
-	
+    <!--成就的北中南東progress-->
+    <link rel="stylesheet" href="css/test.css" type="text/css">
+
+	<script src="https://code.jquery.com/jquery-latest.min.js"></script>
+	<link rel="stylesheet" href="css/ammap.css" type="text/css">
+	<script src="js/ammap.js" type="text/javascript"></script>
+	<script src="js/taiwanHigh.js" type="text/javascript"></script>
 	<!-- Custom styles for this template -->
     <link href="https://getbootstrap.com/examples/carousel/carousel.css" rel="stylesheet">
 
@@ -21,7 +27,19 @@
 
     <!-- Custom styles for this template -->
     <link href="https://getbootstrap.com/examples/jumbotron-narrow/jumbotron-narrow.css" rel="stylesheet">
-
+<link href="https://fonts.googleapis.com/css?family=Open+Sans:300" rel="stylesheet">
+<link href="https://fonts.googleapis.com/css?family=Noto+Sans" rel="stylesheet">
+    <link rel='stylesheet prefetch' href='https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/2.3.2/css/bootstrap.css'>
+  <link rel='stylesheet prefetch' href='https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.6.3/css/font-awesome.min.css'>
+    <!--box-->
+     <link href="https://ajax.googleapis.com/ajax/libs/jqueryui/1.10.2/themes/hot-sneaks/jquery-ui.css" rel="stylesheet">
+  <script type="text/javascript" src="https://ajax.googleapis.com/ajax/libs/jquery/1.9.1/jquery.min.js"></script>
+  <script type="text/javascript" src="https://ajax.googleapis.com/ajax/libs/jqueryui/1.10.2/jquery-ui.min.js"></script>
+     <!-- end-->
+      <link rel="stylesheet" href="css/block_style.css">
+      <link href="css/top.css" rel="stylesheet">
+  <script src="https://code.jquery.com/jquery-1.12.4.js"></script>
+  <script src="https://code.jquery.com/ui/1.12.1/jquery-ui.js"></script>
     <!-- Just for debugging purposes. Don't actually copy these 2 lines! -->
     <!--[if lt IE 9]><script src="../../assets/js/ie8-responsive-file-warning.js"></script><![endif]-->
     <script src="https://getbootstrap.com/assets/js/ie-emulation-modes-warning.js"></script>
@@ -54,7 +72,7 @@
                 <span class="icon-bar"></span>
                 <span class="icon-bar"></span>
               </button>
-              <a class="navbar-brand" href="taiwan.html">LOGO</a>
+              <a class="navbar-brand" href="index.html">LOGO</a>
             </div>
             <div id="navbar" class="navbar-collapse collapse">          
 				<ul class="nav navbar-nav navbar-right">
@@ -63,7 +81,7 @@
 					<li class="dropdown hide" id="name">
 						<a  class="dropdown-toggle" id="Uname" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">User<span class="caret"></span></a>
 						<ul class="dropdown-menu">
-							<li><a href="123.html" id="person">person</a></li>
+							<li><a href="#" id="person">person</a></li>
 							<li role="separator" class="divider"></li>
 							<li><a id="out">Log out</a></li>
 						</ul>
@@ -98,48 +116,57 @@
 						</a>        
 					</li>
 					<li>
-						<a id="Ulike" onclick="getElementById('under').innerHTML='like';">
+						<a id="Ulike" onclick="getElementById('map_canvas').classList.add('hide');">
 							收藏
 						</a>        
 					</li>					
 					<li>
-						<a id="Urank" onclick="getElementById('under').innerHTML='rank';">
+						<a id="Urank" onclick="getElementById('map_canvas').classList.remove('hide');">
 							成就
 						</a>        
 					</li>
 				</ul> 				
 			</div>			
-			</div>			
-			</div>		
+			</div>	
+			</div>	
+			
       </div>
-<!--	  
-      <div class="col-xs-12 ">
-        <ul class="user-navi clearfix semantic-navigation" id="sub_navigation">
-			<li id="user-recipes" class="active"><a href=""><span>貼文</span></a></li>
-			<li id="user-favorites"><a href=""><span>收藏</span></a></li>
-			<li id="user-dishes"><a href=""><span>成就</span></a></li>
-			</ul>
-
-			<div class="inner-block clearfix">
-			  <div class="row">
-				  <div class="row no-content">
-					<div class="col-xs-12 col-sm-10 col-lg-9">
-						<p>目前沒有任何新的感想和收藏喔，趕快去 <a href="/recipes/new?ref=users">發表新感想</a> 吧！</p>
-					</div>
-				  </div>
-			  </div>
-			</div>		
-	  </div>
--->   <div class="col-xs-12 ">
+   <div class="col-xs-12 ">
         	<div class="sidebar">
 			<div class="inner-block widget">
 				<p id="under">目前沒有任何新的感想和收藏喔，趕快去發表新感想吧！</p>			
 			</div>			
-			</div>		
+			</div>
+			<div id="map_canvas">
+				<div id="mapdiv" style="width:auto; background-color:#FFFFFF; height: 500px;"></div>
+			</div>			
       </div>
 	</div>
   </div>
 </div>
+
+	<div class="wrap" id='wrap'>
+		 <div class="progress-radial" id="northprogress">
+          <div class="overlay" id="north"></div>
+          <div class="overlay1">北</div>
+        </div>
+		
+        <div class="progress-radial" id="mid1progress">
+          <div class="overlay" id="mid1"></div>
+          <div class="overlay1">中</div>
+        </div>
+
+        <div class="progress-radial" id="southprogress">
+          <div class="overlay" id="south"></div>
+          <div class="overlay1">南</div>
+        </div>
+
+        <div class="progress-radial" id="eastprogress">
+          <div class="overlay" id="east"></div>
+          <div class="overlay1">東</div>
+        </div>
+		
+    </div>
 
 	<!-- Bootstrap core JavaScript
     ================================================== -->
@@ -151,28 +178,6 @@
     <script src="https://getbootstrap.com/assets/js/ie10-viewport-bug-workaround.js"></script>
 	<script src="https://www.gstatic.com/firebasejs/3.6.2/firebase.js"></script>
 	<script  src="js/sign.js"></script>
-	<script type="text/javascript">	
-	function thehash(){
-		return location.hash;
-	}
-	(function(){  				
-		firebase.auth().onAuthStateChanged(firebaseUser =>{
-		var myhash = thehash().split('#');
-		var Ref = firebase.database().ref('user/' + myhash[1]);
-		Ref.on("value", function(snapshot) {
-				document.getElementById("author").innerHTML = snapshot.val().displayName;  
-				document.getElementById("authorP").src = snapshot.val().photo;
-			});
-		document.getElementById("Ucount").classList.add("hide");
-		
-		if(firebaseUser){		
-			var uid = firebase.auth().currentUser.uid;			
-			if(uid==myhash[1]){
-				document.getElementById("Ucount").classList.remove("hide");
-			}/*			
-*/		}
-		});		
-	}());	
-	</script>
+	<script  src="js/rank.js"></script>	
   </body>
 </html>
