--- a/index.html
+++ b/index.html
@@ -10,8 +10,30 @@
     <meta name="author" content="">
 
      <script src='https://ajax.aspnetcdn.com/ajax/jQuery/jquery-1.7.2.js'></script><!--map-->
-     <meta name="viewport" content="initial-scale=1.0, user-scalable=no" /><!--map-->   
 	 <script src="js/taiwan.js" type="text/javascript"></script>
+	<link href="css/style2.css" rel="stylesheet" type="text/css">
+	 <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.1/jquery.min.js"></script>
+    <!--map-->
+	<title>Factari Wan</title>
+	<!-- Custom styles for this template -->
+    <link href="https://getbootstrap.com/examples/jumbotron-narrow/jumbotron-narrow.css" rel="stylesheet">
+    <!-- Bootstrap core CSS -->
+    <link href="https://getbootstrap.com/dist/css/bootstrap.min.css" rel="stylesheet">
+    <!-- IE10 viewport hack for Surface/desktop Windows 8 bug -->
+    <link href="https://getbootstrap.com/assets/css/ie10-viewport-bug-workaround.css" rel="stylesheet">
+	<!-- Custom styles for this template -->
+    <link href="https://getbootstrap.com/examples/carousel/carousel.css" rel="stylesheet">
+    <!-- Just for debugging purposes. Don't actually copy these 2 lines! -->
+    <!--[if lt IE 9]><script src="../../assets/js/ie8-responsive-file-warning.js"></script><![endif]-->
+    <script src="https://getbootstrap.com/assets/js/ie-emulation-modes-warning.js"></script>
+    <!-- HTML5 shim and Respond.js for IE8 support of HTML5 elements and media queries -->
+    <!--[if lt IE 9]>
+      <script src="https://oss.maxcdn.com/html5shiv/3.7.3/html5shiv.min.js"></script>
+      <script src="https://oss.maxcdn.com/respond/1.4.2/respond.min.js"></script>
+    <![endif]-->
+   <script type='text/javascript'    
+            src='https://ajax.aspnetcdn.com/ajax/jQuery/jquery-1.7.1.js'></script> 
    <style>
         html { height: 100% }  
 		body,input { padding-top: 100px;font-size: 9pt; font-family:Microsoft JhengHei;}    
@@ -97,36 +119,7 @@
 				width: 300px;
 			}
 		}		
-    </style>
-    <!--map-->
-
-  <link href="css/style2.css" rel="stylesheet" type="text/css">
-    <title>Factari Wan</title>
-
-    <!-- Bootstrap core CSS -->
-    <link href="https://getbootstrap.com/dist/css/bootstrap.min.css" rel="stylesheet">
-
-    <!-- IE10 viewport hack for Surface/desktop Windows 8 bug -->
-    <link href="https://getbootstrap.com/assets/css/ie10-viewport-bug-workaround.css" rel="stylesheet">
-
-	<!-- Custom styles for this template -->
-    <link href="https://getbootstrap.com/examples/carousel/carousel.css" rel="stylesheet">
-
-    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.1/jquery.min.js"></script>
-    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
-    <!-- Just for debugging purposes. Don't actually copy these 2 lines! -->
-    <!--[if lt IE 9]><script src="../../assets/js/ie8-responsive-file-warning.js"></script><![endif]-->
-    <script src="https://getbootstrap.com/assets/js/ie-emulation-modes-warning.js"></script>
-
-    <!-- HTML5 shim and Respond.js for IE8 support of HTML5 elements and media queries -->
-    <!--[if lt IE 9]>
-      <script src="https://oss.maxcdn.com/html5shiv/3.7.3/html5shiv.min.js"></script>
-      <script src="https://oss.maxcdn.com/respond/1.4.2/respond.min.js"></script>
-    <![endif]-->
-   <script type='text/javascript' 
-            src='https://ajax.aspnetcdn.com/ajax/jQuery/jquery-1.7.1.js'></script>   
-    <meta name="viewport" content="initial-scale=1.0, user-scalable=no" />
+    </style>			
   </head>
 
   <body>
@@ -142,7 +135,7 @@
                 <span class="icon-bar"></span>
                 <span class="icon-bar"></span>
               </button>
-              <a class="navbar-brand" href="index.html">LOGO</a>
+              <a class="navbar-brand" href="taiwan.html">LOGO</a>
             </div>
             <div id="navbar" class="navbar-collapse collapse">          
 				<ul class="nav navbar-nav navbar-right">
@@ -162,9 +155,9 @@
         </nav>
 
       </div>
-    </div>	
-  
- <div class="container"> 
+    </div>
+
+  <div class="container"> 
   <div class="map">
   <div id="maplist" class="idTabs">
         <div class="keelung" >
@@ -231,27 +224,20 @@
 			<a href="#openModal" onclick="initMap('kinmen');"></a>
 		</div>
         <div id="twmap" class="items">
-    
-  </map>
-      <!--<footer class="footer">
-      </footer>-->
-      
+
     </div> <!-- /container -->
-   
-  <!-- Bootstrap core JavaScript
+
+	<!-- Bootstrap core JavaScript
     ================================================== -->
     <!-- Placed at the end of the document so the pages load faster -->
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
     <script>window.jQuery || document.write('<script src="../../assets/js/vendor/jquery.min.js"><\/script>')</script>
-    <script src="https://getbootstrap.com/dist/js/bootstrap.min.js"></script>
+    <script src="http://getbootstrap.com/dist/js/bootstrap.min.js"></script>
     <!-- IE10 viewport hack for Surface/desktop Windows 8 bug -->
-    <script src="https://getbootstrap.com/assets/js/ie10-viewport-bug-workaround.js"></script>
-
-    <!--map-->
-   
-    <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyCL6jufC2Qe61igD_cSxoxEx9E9JqOJJM0&callback=initMap&signed_in=true&libraries=places&sensor=false" async defer>
+    <script src="http://getbootstrap.com/assets/js/ie10-viewport-bug-workaround.js"></script>
+<script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyCL6jufC2Qe61igD_cSxoxEx9E9JqOJJM0&callback=initMap&signed_in=true&libraries=places&sensor=false" async defer>
     </script><!--map-->
-	<script src="https://www.gstatic.com/firebasejs/3.6.2/firebase.js"></script>
-    <script src="js/sign.js"></script>
+<script src="https://www.gstatic.com/firebasejs/3.6.2/firebase.js"></script>
+<script src="js/sign.js"></script>
   </body>
 </html>
