--- a/info.html
+++ b/info.html
@@ -78,7 +78,32 @@
         height: 300px;
         width: 300px;
       }
-    }
+        #map_canvas  margin:0px auto; width:700px; height:500px;     
+            @media (max-width: 900px) {			
+                #table_class {
+                    width: 600px;
+                }
+            }
+            @media (max-width: 700px) {			
+                #table_class {
+                    width: 400px;
+                }
+            }		
+            @media (max-width: 600px) {			
+                #table_class {
+                    width: 450px;
+                }
+            }
+            @media (max-width: 500px) {     
+                #table_class {
+                    width: 400px;
+                }
+            }
+            @media (max-width: 400px) {     
+                #table_class {
+                    width: 350px;
+                }
+            }
     </style>
 
 	<script src="js/road.js"></script>
@@ -86,7 +111,7 @@
 
   <body>
 	<div class="navbar-wrapper">
-      <div class="container">
+      <div class="container" >
 
         <nav class="navbar navbar-inverse navbar-static-top">
           <div class="container">
@@ -119,7 +144,7 @@
     </div>
 <div id="map_canvas"></div>
 
-<div class="container" id="down">	
+<div class="container" id="down" >	
      <div class="panel panel-default">
        <div class="panel-heading"><h4><strong id="theTitlein">Loading...</strong></h4></div>
         <div class="panel-body table-responsive">
@@ -139,7 +164,7 @@
                 <div class="panel-body accordion-body collapse"  id="share">
                     <ul>    
                         <li>分享至...</li>
-                        <button class="btn btn-block"><span class="glyphicon glyphicon-fb"></span></button>
+                        <li><a href="javascript: void(window.open('http://www.facebook.com/share.php?u='.concat(encodeURIComponent(location.href)) ));"><img title="分享到臉書！" src="images/share_icon/facebook.png" border="0" width="48" /></a><a href="javascript: void(window.open('http://www.plurk.com/?qualifier=shares&status=' .concat(encodeURIComponent(location.href)) .concat(' ') .concat('&#40;') .concat(encodeURIComponent(document.title)) .concat('&#41;')));"><img title="分享到噗浪！" src="images/share_icon/plurk.png" border="0" width="48" /></a><a href="javascript: void(window.open('http://twitter.com/home/?status='.concat(encodeURIComponent(document.title)) .concat(' ') .concat(encodeURIComponent(location.href))));"><img title="分享到推特！" src="images/share_icon/twitter.png" border="0" width="48" /></a><a href="javascript:(function(){window.open('http://v.t.sina.com.cn/share/share.php?title='+encodeURIComponent(document.title)+'&url='+encodeURIComponent(location.href)+'&source=bookmark','_blank','width=450,height=400');})()"><img title="分享到微博！" src="images/share_icon/weibo.png" border="0" width="48" /></a><a href="javascript: void(window.open('https://plus.google.com/share?url='.concat(encodeURIComponent(location.href)), '', 'menubar=no,toolbar=no,resizable=yes,scrollbars=yes,height=600,width=600'));"><img title="分享到Google+！" src="images/share_icon/google_plus.png" border="0" width="48" ></a></li>
                     </ul>
                 </div>
             </div>
