--- a/person.html
+++ b/person.html
@@ -37,6 +37,7 @@
   <script type="text/javascript" src="https://ajax.googleapis.com/ajax/libs/jqueryui/1.10.2/jquery-ui.min.js"></script>
      <!-- end-->
       <link rel="stylesheet" href="css/block_style.css">
+      <link rel="stylesheet" href="css/style2.css">
       <link href="css/top.css" rel="stylesheet">
   <script src="https://code.jquery.com/jquery-1.12.4.js"></script>
   <script src="https://code.jquery.com/ui/1.12.1/jquery-ui.js"></script>
@@ -52,7 +53,7 @@
 	 <script type='text/javascript' 
             src='https://ajax.aspnetcdn.com/ajax/jQuery/jquery-1.7.1.js'></script>   
     <meta name="viewport" content="initial-scale=1.0, user-scalable=no" />   
-	<link rel="stylesheet" media="all" href="https://d3kjtz7uyul5bi.cloudfront.net/assets/application-69965045c910c69a67548a599c43b364a80f9b2aa0d70b7a9f9add3ad7a83641.css" />
+	<!--<link rel="stylesheet" media="all" href="https://d3kjtz7uyul5bi.cloudfront.net/assets/application-69965045c910c69a67548a599c43b364a80f9b2aa0d70b7a9f9add3ad7a83641.css" />-->
 	<style>
 		body,input { padding-top: 100px;font-size: 9pt; font-family:Microsoft JhengHei;}
 		#o-wrapper {z-index:0;}
@@ -131,43 +132,77 @@
 			</div>	
 			
       </div>
+      
    <div class="col-xs-12 ">
         	<div class="sidebar">
 			<div class="inner-block widget">
-				<p id="under">目前沒有任何新的感想和收藏喔，趕快去發表新感想吧！</p>			
+				<div id="under">
+                   <p>目前沒有任何新的感想和收藏喔，趕快去發表新感想吧！</p>
+                    <div class="card-container" id="cards">
+                        <div class="card">
+                            <img src="images/info/m1.jpg" class="card-image">
+                            <div class="card-info">
+                                <div class="card-title">Title</div>
+                                <div class="card-detail">1234
+                                </div>
+                            </div>
+                            <div class="card-social">
+                                <ul>
+                                    <li><a href="article.html" target="_blank"><i class="fa fa-comment-o" aria-hidden="true"></i></a>
+                                    </li>
+                                    <li><i class="fa fa-heart-o" aria-hidden="true"></i>
+                                    </li>
+                                </ul>
+                            </div>
+                        </div>
+                        <div class="card">
+                            <img src="images/info/m1.jpg" class="card-image">
+                            <div class="card-info">
+                                <div class="card-title">Title</div>
+                                <div class="card-detail">
+                                </div>
+                            </div>
+                            <div class="card-social">
+                                <ul>
+                                    <li><a href="article.html" class="fa fa-comment"></a>
+                                    </li>
+                                    <li><a class="fa-heart-ofa fa-heart "></a>
+                                    </li>
+                                </ul>
+                            </div>
+                        </div>
+                    </div>	
+                </div>		
 			</div>			
 			</div>
 			<div id="map_canvas">
 				<div id="mapdiv" style="width:auto; background-color:#FFFFFF; height: 500px;"></div>
-			</div>			
+			    <div id='wrap'><!--class="wrap"-->
+                     <div class="progress-radial" id="northprogress">
+                      <div class="overlay" id="north"></div>
+                      <div class="overlay1">北</div>
+                    </div>
+
+                    <div class="progress-radial" id="mid1progress">
+                      <div class="overlay" id="mid1"></div>
+                      <div class="overlay1">中</div>
+                    </div>
+
+                    <div class="progress-radial" id="southprogress">
+                      <div class="overlay" id="south"></div>
+                      <div class="overlay1">南</div>
+                    </div>
+
+                    <div class="progress-radial" id="eastprogress">
+                      <div class="overlay" id="east"></div>
+                      <div class="overlay1">東</div>
+                    </div>
+                </div>
+            </div>
       </div>
 	</div>
   </div>
 </div>
-
-	<div class="wrap" id='wrap'>
-		 <div class="progress-radial" id="northprogress">
-          <div class="overlay" id="north"></div>
-          <div class="overlay1">北</div>
-        </div>
-		
-        <div class="progress-radial" id="mid1progress">
-          <div class="overlay" id="mid1"></div>
-          <div class="overlay1">中</div>
-        </div>
-
-        <div class="progress-radial" id="southprogress">
-          <div class="overlay" id="south"></div>
-          <div class="overlay1">南</div>
-        </div>
-
-        <div class="progress-radial" id="eastprogress">
-          <div class="overlay" id="east"></div>
-          <div class="overlay1">東</div>
-        </div>
-		
-    </div>
-
 	<!-- Bootstrap core JavaScript
     ================================================== -->
     <!-- Placed at the end of the document so the pages load faster -->
@@ -177,7 +212,7 @@
     <!-- IE10 viewport hack for Surface/desktop Windows 8 bug -->
     <script src="https://getbootstrap.com/assets/js/ie10-viewport-bug-workaround.js"></script>
 	<script src="https://www.gstatic.com/firebasejs/3.6.2/firebase.js"></script>
-	<script  src="js/sign.js"></script>
+	<!--<script  src="js/sign.js"></script>-->
 	<script  src="js/rank.js"></script>	
   </body>
 </html>
