--- a/info.html
+++ b/info.html
@@ -1,6 +1,8 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
+  <link rel="shortcut icon" href="images/icon.ico"/>
+<link rel="bookmark" href="images/icon.ico"/>
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
@@ -47,7 +49,7 @@
             src='https://ajax.aspnetcdn.com/ajax/jQuery/jquery-1.7.1.js'></script>   
     <script src="https://maps.google.com/maps/api/js?sensor=true"></script>
     <meta name="viewport" content="initial-scale=1.0, user-scalable=no" />
-    <style>
+        <style>
         body,input { font-size: 9pt; font-family:Microsoft JhengHei;padding-top: 100px;}		
         html { height: 100% }  
 		a {color:#FFFFFF}
@@ -105,13 +107,12 @@
                 }
             }
     </style>
-
 	<script src="js/road.js"></script>
   </head>
 
   <body>
 	<div class="navbar-wrapper">
-      <div class="container" >
+      <div class="container">
 
         <nav class="navbar navbar-inverse navbar-static-top">
           <div class="container">
@@ -122,7 +123,7 @@
                 <span class="icon-bar"></span>
                 <span class="icon-bar"></span>
               </button>
-              <a class="navbar-brand" href="index.html">LOGO</a>
+              <a class="navbar-brand" href="index.html"><img src="images/logo.png"></a>
             </div>
             <div id="navbar" class="navbar-collapse collapse">          
 				<ul class="nav navbar-nav navbar-right">
@@ -144,7 +145,7 @@
     </div>
 <div id="map_canvas"></div>
 
-<div class="container" id="down" >	
+<div class="container" id="down">	
      <div class="panel panel-default">
        <div class="panel-heading"><h4><strong id="theTitlein">Loading...</strong></h4></div>
         <div class="panel-body table-responsive">
@@ -157,6 +158,9 @@
               <div class="btn-group" role="group" id="add_a">
                   <button type="button" class="btn btn-block panel-heading accordion-toggle" data-toggle="collapse" data-target="#share" aria-expanded="true" aria-controls="share"><span class="glyphicon glyphicon-share-alt" aria-hidden="true"></span>分享</button>
               </div>
+			  <div class="btn-group" role="group" id="add_a">
+                  <button type="button" class="btn btn-block panel-heading accordion-toggle" data-toggle="collapse" data-target="#thestar" aria-expanded="true" aria-controls="thestar"><span class="glyphicon glyphicon-star" aria-hidden="true"></span>評分</button>
+              </div>
               <div class="btn-group" role="group" id="add_a">
                   <button type="button" class="btn btn-block panel-heading accordion-toggle" data-toggle="collapse" data-target="#add_article" aria-expanded="true" aria-controls="add_article"><span class="glyphicon glyphicon-plus"></span>新增評論</button>
               </div>
@@ -164,62 +168,34 @@
                 <div class="panel-body accordion-body collapse"  id="share">
                     <ul>    
                         <li>分享至...</li>
-                        <li><a href="javascript: void(window.open('http://www.facebook.com/share.php?u='.concat(encodeURIComponent(location.href)) ));"><img title="分享到臉書！" src="images/share_icon/facebook.png" border="0" width="48" /></a><a href="javascript: void(window.open('http://www.plurk.com/?qualifier=shares&status=' .concat(encodeURIComponent(location.href)) .concat(' ') .concat('&#40;') .concat(encodeURIComponent(document.title)) .concat('&#41;')));"><img title="分享到噗浪！" src="images/share_icon/plurk.png" border="0" width="48" /></a><a href="javascript: void(window.open('http://twitter.com/home/?status='.concat(encodeURIComponent(document.title)) .concat(' ') .concat(encodeURIComponent(location.href))));"><img title="分享到推特！" src="images/share_icon/twitter.png" border="0" width="48" /></a><a href="javascript:(function(){window.open('http://v.t.sina.com.cn/share/share.php?title='+encodeURIComponent(document.title)+'&url='+encodeURIComponent(location.href)+'&source=bookmark','_blank','width=450,height=400');})()"><img title="分享到微博！" src="images/share_icon/weibo.png" border="0" width="48" /></a><a href="javascript: void(window.open('https://plus.google.com/share?url='.concat(encodeURIComponent(location.href)), '', 'menubar=no,toolbar=no,resizable=yes,scrollbars=yes,height=600,width=600'));"><img title="分享到Google+！" src="images/share_icon/google_plus.png" border="0" width="48" ></a></li>
-                    </ul>
+                        <a href="javascript: void(window.open('https://www.facebook.com/share.php?u='.concat(encodeURIComponent(location.href)) ));"><img title="分享到臉書！" src="images/share_icon/facebook.png" border="0" width="48" /></a><a href="javascript: void(window.open('https://www.plurk.com/?qualifier=shares&status=' .concat(encodeURIComponent(location.href)) .concat(' ') .concat('&#40;') .concat(encodeURIComponent(document.title)) .concat('&#41;')));"><img title="分享到噗浪！" src="images/share_icon/plurk.png" border="0" width="48" /></a><a href="javascript: void(window.open('https://twitter.com/home/?status='.concat(encodeURIComponent(document.title)) .concat(' ') .concat(encodeURIComponent(location.href))));"><img title="分享到推特！" src="images/share_icon/twitter.png" border="0" width="48" /></a><a href="javascript:(function(){window.open('https://v.t.sina.com.cn/share/share.php?title='+encodeURIComponent(document.title)+'&url='+encodeURIComponent(location.href)+'&source=bookmark','_blank','width=450,height=400');})()"><img title="分享到微博！" src="images/share_icon/weibo.png" border="0" width="48" /></a><a href="javascript: void(window.open('https://plus.google.com/share?url='.concat(encodeURIComponent(location.href)), '', 'menubar=no,toolbar=no,resizable=yes,scrollbars=yes,height=600,width=600'));"><img title="分享到Google+！" src="images/share_icon/google_plus.png" border="0" width="48" ></a>
+					</ul>
                 </div>
-            </div>
+             <div class="panel-body accordion-body collapse"  id="thestar"> 
+						<div id="star"></div>
+						<div id="result"></div>
+                </div>
             <div class="panel-body accordion-body collapse" id="add_article">
                 <ul>    
                     <li>標題</li>
-                    <input type="text" id="title">
-                    <li>
-		                <input class="btn btn-lg btn-success btn-block" type="file" value="upload" id='picture'>
-                    </li>
+					<table>
+					<td> <input type="text" id="title" style="width:290px;" class="col-xs-12"> &nbsp; &nbsp; &nbsp;</td>
+					<td> <input class="btn btn-lg btn-success btn-block " type="file" value="upload" id='picture'> </td>
+					</table>
+                   
                     <li>內容</li>
-                    <textarea cols="100" rows="10" id="words" val=""></textarea>
+                    <textarea style="width:95%;height:200px;" id="words" val=""></textarea>
                 </ul>
+				<p style="text-align:right;">
                 <button type="button" id="cancel">重寫</button>
                 <button type="button" id="postWrite" >送出</button>
-                </div>
-            </div> 
-            <div class="card-container" id="cards">
-    <!--            <div class="card">
-                    <img src="images/info/m1.jpg" class="card-image">
-                    <div class="card-info">
-                        <div class="card-title">Title</div>
-                        <div class="card-detail">1234
-                        </div>
-                    </div>
-                    <div class="card-social">
-                        <ul>
-                            <li><a href="article.html" target="_blank"><i class="fa fa-comment-o" aria-hidden="true"></i></a>
-                            </li>
-                            <li><i class="fa fa-heart-o" aria-hidden="true"></i>
-                            </li>
-                        </ul>
-                    </div>
-                </div>
-				<div class="card">
-                    <img src="images/info/m1.jpg" class="card-image">
-                    <div class="card-info">
-                        <div class="card-title">Title</div>
-                        <div class="card-detail">
-                        </div>
-                    </div>
-                    <div class="card-social">
-                        <ul>
-                            <li><a href="article.html" class="fa fa-comment"></a>
-                            </li>
-                            <li><a class="fa-heart-ofa fa-heart "></a>
-                            </li>
-                        </ul>
-                    </div>
-                </div>
-    -->        </div>
-            <footer class="footer">
-                <p>&copy; 2016 Company, Inc.</p>
-            </footer>
-        </div>	
+				</p>
+            </div>
+		</div>
+	</div>
+</div> 
+            <div class="card-container" id="cards">          </div>
+
 
  <!-- /container -->
 
@@ -234,5 +210,37 @@
 	<script src="https://www.gstatic.com/firebasejs/3.6.2/firebase.js"></script>
 	<script src="js/sign.js"></script>	
     <script src="js/post.js"></script>
+<script src="js/jquery-1.5.1.js" type="text/javascript"></script>
+ <script src="js/jquery.raty.js"></script>
+ <script type="text/javascript">
+	   $("#result").hide();
+       $('#star').raty({
+		hints			: ['bad', 'poor', 'regular', 'good', 'gorgeous'],
+		path			: 'images',
+		round			: { down: .25, full: .6, up: .76 },
+		size			: 25,
+		starOff			: 'star-off.png',
+		starOn			: 'star-on-big.png',
+		target			: '#result',
+		targetFormat	: '{score}',
+		targetKeep		: true,
+		targetType		: 'score'
+
+       });
+
+	   var text = $('#result').text();
+
+        $('img').click(function () {
+
+            if ($('#result').text() != text) {
+
+                alert($('#result').text());
+
+                return;
+
+            }
+
+        });
+   </script>
   </body>
 </html>
