--- a/index.html
+++ b/index.html
@@ -35,14 +35,14 @@
    <script type='text/javascript'    
             src='https://ajax.aspnetcdn.com/ajax/jQuery/jquery-1.7.1.js'></script> 
    <style>
-        html { height: 100% }  
+                html { height: 100% }  
 		body,input { padding-top: 100px;font-size: 9pt; font-family:Microsoft JhengHei;}    
         #map {
-           margin: 55px;
-           height: 550px;
-           width: 550px;
-        }
-        .modalDialog {
+				margin: 20px;
+				height: 620px;
+				width: 620px;
+			}
+		.modalDialog {
             position: fixed;
             font-family: Arial, Helvetica, sans-serif;
             top: 0;
@@ -102,7 +102,7 @@
 				width: 500px;
 			}
 			.modalDialog > div {
-				width: 90%;
+				width: 580px;
 			}
 		}
 		@media (max-width: 650px) {			
@@ -111,14 +111,206 @@
 				height: 400px;
 				width: 400px;
 			}
+			.modalDialog > div {
+				width: 460px;
+			}
+			.map{
+				width: 350px;
+				height: 600px;
+				background-size:90%;
+				margin:0px 0px 0px 100px;
+			}
+			#maplist{
+				width: 350px;
+				height: 600px;
+			}
+			.keelung {top:10px; left:250px;}
+.taipei{
+	top:29px;
+	left:220px;
+}
+.xinbei{
+	top:50px;
+	left:210px;
+}
+.taoyuan{
+	top:40px;
+	left:150px;
+}
+.hsinchu{
+	top:80px;
+	left:140px;
+}
+.miaoli{
+	top:120px;
+	left:110px;
+}
+.taichung{
+	top:170px;
+	left:90px;
+}
+.changhua{
+	top:200px;
+	left:30px;
+}
+.nantou{
+	top:230px;
+	left:120px;
+}
+.yunlin{
+	top:260px;
+	left:30px;
+}
+.chiayi{
+	top:300px;
+	left:50px;
+}
+.tainan{
+	top:345px;
+	left:20px;
+}
+.kaohsiung{
+	top:390px;
+	left:45px;
+}
+.pingtung{
+	top:460px;
+	left:55px;
+}
+.yilan{
+	top:110px;
+	left:230px;
+}
+.hualien{
+	top:250px;
+	left:200px;
+}
+.taitung{
+	top:400px;
+	left:140px;
+}
+.penghu{
+	top:150px;
+	left:5px;
+}
+.kinmen{
+	top:40px;
+	left:50px;
+}
 		}		
-		@media (max-width: 500px) {			
+		@media (max-width: 470px) {			
 			#map {
 				margin: 5px;
-				height: 300px;
+				height: 330px;
+				width: 330px;
+			}
+			.modalDialog > div {
+				width: 380px;
+			}
+			.map{
+				width: 250px;
+				height: 430px;
+				background-size:90%;
+				margin:0px 0px 0px 40px;
+			}
+			#maplist{
+				width: 250px;
+				height: 430px;
+			}
+			.keelung {top:0px; left:170px;}
+.taipei{
+	top:29px;
+	left:220px;
+}
+.xinbei{
+	top:25px;
+	left:150px;
+}
+.taoyuan{
+	top:20px;
+	left:90px;
+}
+.hsinchu{
+	top:50px;
+	left:80px;
+}
+.miaoli{
+	top:85px;
+	left:70px;
+}
+.taichung{
+	top:115px;
+	left:60px;
+}
+.changhua{
+	top:140px;
+	left:15px;
+}
+.nantou{
+	top:160px;
+	left:80px;
+}
+.yunlin{
+	top:180px;
+	left:0px;
+}
+.chiayi{
+	top:210px;
+	left:30px;
+}
+.tainan{
+	top:240px;
+	left:5px;
+}
+.kaohsiung{
+	top:280px;
+	left:20px;
+}
+.pingtung{
+	top:330px;
+	left:30px;
+}
+.yilan{
+	top:80px;
+	left:170px;
+}
+.hualien{
+	top:170px;
+	left:140px;
+}
+.taitung{
+	top:270px;
+	left:100px;
+}
+.penghu{
+	top:90px;
+	left:0px;
+}
+.kinmen{
+	top:20px;
+	left:25px;
+}
+		}
+		@media (max-width: 400px) {			
+			#map {
+				margin: 3px;
+				height: 250px;
+				width: 250px;
+			}
+			.modalDialog > div {
+				width: 330px;
+			}
+		}
+		@media (max-width: 350px) {			
+			#map {
+				margin: 3px;
+				height: 250px;
+				width: 250px;
+			}
+			.modalDialog > div {
 				width: 300px;
 			}
-		}		
+		}
     </style>			
   </head>
 
@@ -135,7 +327,7 @@
                 <span class="icon-bar"></span>
                 <span class="icon-bar"></span>
               </button>
-              <a class="navbar-brand" href="taiwan.html">LOGO</a>
+              <a class="navbar-brand" href="taiwan.html"><img src="images/logo.png"></a>
             </div>
             <div id="navbar" class="navbar-collapse collapse">          
 				<ul class="nav navbar-nav navbar-right">
@@ -169,7 +361,7 @@
                 </div>
             </div>
         </div>
-        <div class="taipei" >
+        <div class="taipei hide" >
             <a href="#openModal" onclick="initMap('taipei');"></a>
         </div>
         <div class="xinbei" >
