--- a/person.html
+++ b/person.html
@@ -57,6 +57,10 @@
 	<style>
 		body,input { padding-top: 100px;font-size: 9pt; font-family:Microsoft JhengHei;}
 		#o-wrapper {z-index:0;}
+		
+		.container { width: auto;}
+		#wrap{width:auto;margin: 0px auto;}
+
     </style>
   </head>
 
