把圖片改掉

--- a/person.html
+++ b/person.html
@@ -110,7 +110,7 @@
 			<div class="author-box">
 				<div class="text-center">
 					<a rel="author" class="author" >
-						<img alt="er201024" class="avatar img-circle" id="authorP" src="https://d3kjtz7uyul5bi.cloudfront.net/assets/default/default_avatar-1f70d6bebb0559fd2233ee49343a8f1e847c2e8a7bf394f743962a2863c54f1d.png" width="80" height="80" />
+						<img alt="user" class="avatar img-circle" id="authorP" src="images/test.png" width="80" height="80" />
 						<span itemprop="author" class="author" id="author">使用者</span>
 					</a>    
 				</div>				
