--- a/person.html
+++ b/person.html
@@ -216,7 +216,7 @@
     <!-- IE10 viewport hack for Surface/desktop Windows 8 bug -->
     <script src="https://getbootstrap.com/assets/js/ie10-viewport-bug-workaround.js"></script>
 	<script src="https://www.gstatic.com/firebasejs/3.6.2/firebase.js"></script>
-	<!--<script  src="js/sign.js"></script>-->
+	<script  src="js/sign.js"></script>
 	<script  src="js/rank.js"></script>	
   </body>
 </html>
