--- a/info.html
+++ b/info.html
@@ -25,7 +25,7 @@
     <link href="https://getbootstrap.com/examples/jumbotron-narrow/jumbotron-narrow.css" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css?family=Open+Sans:300" rel="stylesheet">
 
-   <!-- <link rel='stylesheet prefetch' href='https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/2.3.2/css/bootstrap.css'>-->
+   <!--<link rel='stylesheet prefetch' href='https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/2.3.2/css/bootstrap.css'>-->
     <link rel='stylesheet prefetch' href='https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.6.3/css/font-awesome.min.css'>
     <!--box-->
     <link href="https://ajax.googleapis.com/ajax/libs/jqueryui/1.10.2/themes/hot-sneaks/jquery-ui.css" rel="stylesheet">
@@ -33,6 +33,7 @@
     <script type="text/javascript" src="https://ajax.googleapis.com/ajax/libs/jqueryui/1.10.2/jquery-ui.min.js"></script>
      <!-- end-->
     <link rel="stylesheet" href="css/block_style.css">
+    <link rel="stylesheet" href="css/comment.css">
     <link href="css/top.css" rel="stylesheet">
     <script src="https://code.jquery.com/jquery-1.12.4.js"></script>
     <script src="https://code.jquery.com/ui/1.12.1/jquery-ui.js"></script>
@@ -46,7 +47,7 @@
       <script src="https://oss.maxcdn.com/respond/1.4.2/respond.min.js"></script>
     <![endif]-->
     <script type='text/javascript' src='https://ajax.aspnetcdn.com/ajax/jQuery/jquery-1.7.1.js'></script>   
-    <script src="https://maps.google.com/maps/api/js?sensor=true"></script>
+    <script src="https://maps.google.com/maps/api/js?sensor=false"></script>
     <meta name="viewport" content="initial-scale=1.0, user-scalable=no" />
     <style>
         body,input { font-size: 9pt; font-family:Microsoft JhengHei;padding-top: 100px;}		
@@ -183,6 +184,8 @@
   </head>
 
   <body>
+    <a href="javascript:" id="top"><i class="icon-chevron-up"></i></a>
+    <link href="http://netdna.bootstrapcdn.com/font-awesome/3.2.1/css/font-awesome.css" rel="stylesheet">
 	<div class="navbar-wrapper">
       <div class="container">
 
@@ -195,7 +198,7 @@
                 <span class="icon-bar"></span>
                 <span class="icon-bar"></span>
               </button>
-              <a class="navbar-brand" href="index.html"><img src="images/logo.png"></a>
+              <a class="navbar-brand" href="index.html"><img src="images/Logo.png"></a>
             </div>
             <div id="navbar" class="navbar-collapse collapse">          
 				<ul class="nav navbar-nav navbar-right">
@@ -221,46 +224,57 @@
      <div class="panel panel-default" id="table_class">
        <div class="panel-heading"><h4><strong id="theTitlein">Loading...</strong></h4></div>
         <div class="panel-body table-responsive">
-            <button type="button" class="btn btn-block panel-heading accordion-toggle" data-toggle="collapse" data-target="#directions_panel" aria-expanded="true" aria-controls="directions_panel">
+            <button type="button" class="btn btn-block panel-heading accordion-toggle" data-toggle="collapse" data-target="#directions_panel" aria-expanded="true" aria-controls="directions_panel"  id="add_info" href="javascript:">
                     <span class="glyphicon glyphicon-map-marker" aria-hidden="true"></span>
                    資訊 Information</button>                    
 <div id="directions_panel" style="width:100%"></div>
 
             <div class="btn-group btn-group-justified" role="group" aria-label="...">
-              <div class="btn-group" role="group" id="add_a">
-                  <button type="button" class="btn btn-block panel-heading accordion-toggle" data-toggle="collapse" data-target="#share" aria-expanded="true" aria-controls="share"><span class="glyphicon glyphicon-share-alt" aria-hidden="true"></span>分享&nbsp;&nbsp;&nbsp;/&nbsp;&nbsp;&nbsp;<span class="glyphicon glyphicon-star" aria-hidden="true"></span>評分</button>
-              </div>
-              <div class="btn-group" role="group" id="add_a">
-                  <button type="button" class="btn btn-block panel-heading accordion-toggle" data-toggle="collapse" data-target="#add_article" aria-expanded="true" aria-controls="add_article"><span class="glyphicon glyphicon-plus"></span>新增評論</button>
-              </div>
+                <div class="btn-group" role="group" id="add_star" href="javascript:">
+                    <button type="button" class="btn btn-block panel-heading accordion-toggle" data-toggle="collapse" data-target="#share" aria-expanded="true" aria-controls="share"><span class="glyphicon glyphicon-share-alt" aria-hidden="true"></span>分享&nbsp;&nbsp;&nbsp;/&nbsp;&nbsp;&nbsp;<span class="glyphicon glyphicon-star" aria-hidden="true"></span>評分</button>
+                </div>
+                <div class="btn-group" role="group" id="add_a" >
+                    <button type="button" class="btn btn-block panel-heading accordion-toggle" data-toggle="collapse" data-target="#add_article" aria-expanded="true" aria-controls="add_article"><span class="glyphicon glyphicon-plus"></span>新增評論</button>
+                </div>
             </div>
-                <div class="panel-body accordion-body collapse"  id="share">
+                <div class="panel-body accordion-body collapse"  id="share"  style="background-color:rgba(72,72,72,0.2);">
                     <table class="rwd-table">    
                         <tr>
-                            <td>分享至...</td>
-                            <td><a href="javascript: void(window.open('https://www.facebook.com/share.php?u='.concat(encodeURIComponent(location.href)) ));"><img title="分享到臉書！" src="images/share_icon/facebook.png" border="0" width="48" /></a><a href="javascript: void(window.open('https://www.plurk.com/?qualifier=shares&status=' .concat(encodeURIComponent(location.href)) .concat(' ') .concat('&#40;') .concat(encodeURIComponent(document.title)) .concat('&#41;')));"><img title="分享到噗浪！" src="images/share_icon/plurk.png" border="0" width="48" /></a><a href="javascript: void(window.open('https://twitter.com/home/?status='.concat(encodeURIComponent(document.title)) .concat(' ') .concat(encodeURIComponent(location.href))));"><img title="分享到推特！" src="images/share_icon/twitter.png" border="0" width="48" /></a><a href="javascript:(function(){window.open('https://v.t.sina.com.cn/share/share.php?title='+encodeURIComponent(document.title)+'&url='+encodeURIComponent(location.href)+'&source=bookmark','_blank','width=450,height=400');})()"><img title="分享到微博！" src="images/share_icon/weibo.png" border="0" width="48" /></a><a href="javascript: void(window.open('https://plus.google.com/share?url='.concat(encodeURIComponent(location.href)), '', 'menubar=no,toolbar=no,resizable=yes,scrollbars=yes,height=600,width=600'));"><img title="分享到Google+！" src="images/share_icon/google_plus.png" border="0" width="48" ></a><a href="http://line.naver.jp/R/msg/text/?LINE%E3%81%A7%E9%80%81%E3%82%8B%0D%0Ahttp%3A%2F%2Fline.naver.jp%2F"><img src="images/share_icon/line.png"border="0" width="48" alt="分享到LINE！" /></a></td>
+                            <td style="font-weight:500;	font-size: 18px;">分享至...</td>
+                            <td><a href="javascript: void(window.open('https://www.facebook.com/share.php?u='.concat(encodeURIComponent(location.href)) ));"><img title="分享到臉書！" src="images/share_icon/facebook.png" border="0" width="48" /></a><a href="javascript: void(window.open('https://www.plurk.com/?qualifier=shares&status=' .concat(encodeURIComponent(location.href)) .concat(' ') .concat('&#40;') .concat(encodeURIComponent(document.title)) .concat('&#41;')));"><img title="分享到噗浪！" src="images/share_icon/plurk.png" border="0" width="48" /></a><a href="javascript: void(window.open('https://twitter.com/home/?status='.concat(encodeURIComponent(document.title)) .concat(' ') .concat(encodeURIComponent(location.href))));"><img title="分享到推特！" src="images/share_icon/twitter.png" border="0" width="48" /></a><a href="javascript:(function(){window.open('https://v.t.sina.com.cn/share/share.php?title='+encodeURIComponent(document.title)'+'&url='+encodeURIComponent(location.href)+'&source=bookmark','_blank','width=450,height=400');})()"><img title="分享到微博！" src="images/share_icon/weibo.png" border="0" width="48" /></a><a href="javascript: void(window.open('https://plus.google.com/share?url='.concat(encodeURIComponent(location.href)), '', 'menubar=no,toolbar=no,resizable=yes,scrollbars=yes,height=600,width=600'));"><img title="分享到Google+！" src="images/share_icon/google_plus.png" border="0" width="48" ></a><a href="http://line.naver.jp/R/msg/text/?LINE%E3%81%A7%E9%80%81%E3%82%8B%0D%0Ahttp%3A%2F%2Fline.naver.jp%2F"><img src="images/share_icon/line.png"border="0" width="48" alt="分享到LINE！" /></a></td>
                         </tr>
                         <tr>
-                            <td><p id="star"></p><p id="result"></p></td>
-                            <td><p id="youRank"></p><p id="nowRank">0</p></td>
+                            <td><p id="star"></p></td>
+                            <td><p id="youRank"></p></td>
+                            <td><p id="nowRank">0</p></td>
+                            <td><p id="result"></p></td>
                         </tr>
                     </table>
                 </div>
-            <div class="panel-body accordion-body collapse" id="add_article">
-                <ul>    
-                    <li>標題</li>
-					<table>
-					<td> <input type="text" id="title" style="width:290px;" class="col-xs-12"> &nbsp; &nbsp; &nbsp;</td>
-					<td> <input class="btn btn-lg btn-success btn-block " type="file" value="upload" id='picture'> </td>
-					</table>
-                   
-                    <li>內容</li>
-                    <textarea style="width:95%;height:200px;" id="words" val=""></textarea>
-                </ul>
-				<p style="text-align:right;">
-                <button type="button" id="cancel">重寫</button>
-                <button type="button" id="postWrite" >送出</button>
-				</p>
+            <div class="panel-body accordion-body collapse" style="background-color:rgba(72,72,72,0.4);" id="add_article">
+                        <form class="form" id="form1">
+                            <p class="title">
+                                <textarea name="title" type="text" class="validate[required,custom[onlyLetter],length[0,100]] feedback-input" placeholder="Title" id="title" style="height:100%"></textarea>
+                            </p>
+
+                            <p>
+                                <input class="btn btn-lg btn-success btn-block " type="file" value="upload" id='picture' >
+                            </p>
+
+                            <p class="text">
+                                <textarea name="text" class="validate[required,length[6,300]] feedback-input" id="words" placeholder="Comment"></textarea>
+                            </p>
+                            <div class="row">
+                                <div class="cancel col-md-6">
+                                    <input type="button" value="重寫" id="cancel"/>
+                                    <div class="ease1"></div>
+                                </div>
+                                <div class="postWrite col-md-6">
+                                    <input type="button" value="送出" id="postWrite" href="javascript:"/>
+                                    <div class="ease"></div>
+                                </div>
+                            </div>
+                        </form>
             </div>
 		</div>
 	</div>
@@ -270,7 +284,8 @@
       </div>
 
  <!-- /container -->
-
+    <script src='http://cdnjs.cloudflare.com/ajax/libs/jquery/2.1.3/jquery.min.js'></script>
+    <script src="js/top.js"></script>
 	<!-- Bootstrap core JavaScript
     ================================================== -->
     <!-- Placed at the end of the document so the pages load faster -->
@@ -297,32 +312,26 @@
 		targetFormat	: '{score}',
 		targetKeep		: true,
 		targetType		: 'score'
-
        });
-
 	   var text = $('#result').text();
-
 $('img').click(function () {
-
     if ($('#result').text() != text) {              
 		
 		var st = parseFloat($('#result').text());
 		var user = firebase.auth().currentUser;		
 		if (user != null) {
-		var myhash = location.hash.split('#');
+		var myhash = location.href.split(location.pathname+"?");
 		var RefF = firebase.database().ref('factory/' + myhash[1]);
 		RefF.once("value")
 		.then(function(childSnapshot) {
 			var id = childSnapshot.val().picture;
 			var c = parseFloat(childSnapshot.val().count);
 			var s = parseFloat(childSnapshot.val().score);
-
 			var RefU = firebase.database().ref('user/' + user.uid);
 			RefU.once("value")
 				.then(function(snapshot) {
 				var a = snapshot.val().went; 
 				var my = parseFloat(a[id]);
-
 				if(my != 0){
 					if(my != -1){			
 						s=s-my+st;
@@ -351,9 +360,9 @@ $('img').click(function () {
 		}
                 return;
     }
-
 });
-var myhash = location.hash.split('#');
+
+var myhash = location.href.split(location.pathname+"?");
 var RefF = firebase.database().ref('factory/' + myhash[1]);
 	RefF.once("value")
 	.then(function(childSnapshot) {
@@ -361,10 +370,9 @@ var RefF = firebase.database().ref('factory/' + myhash[1]);
 		var s = parseFloat(childSnapshot.val().score);
 		var id = childSnapshot.val().picture;
 		if(c==0)
-			document.getElementById("nowRank").innerHTML= "工廠評價 : 尚未有人評價";
-		else
-			document.getElementById("nowRank").innerHTML= "工廠評價 : "+s/c;
-
+			document.getElementById("nowRank").innerHTML= '工廠評價 : 尚未有人評價' ;		
+        else
+			document.getElementById("nowRank").innerHTML= "工廠評價 : " + s/c;
 		var user = firebase.auth().currentUser;		
 		if (user != null) {
 			var RefU = firebase.database().ref('user/' + user.uid);
@@ -372,7 +380,6 @@ var RefF = firebase.database().ref('factory/' + myhash[1]);
 				.then(function(snapshot) {
 				var a = snapshot.val().went; 
 				var my = parseFloat(a[id]);
-
 				if(my != 0 && my != -1){
 					document.getElementById("youRank").innerHTML= "你的評價 : "+my;					
 				}
